@@ -19,6 +19,7 @@
 package argonms.game.net.internal;
 
 import argonms.common.net.internal.RemoteCenterOps;
+import argonms.common.util.collections.Pair;
 import argonms.common.util.input.LittleEndianReader;
 import argonms.common.util.output.LittleEndianByteArrayWriter;
 import argonms.common.util.output.LittleEndianWriter;
@@ -26,17 +27,12 @@ import argonms.game.GameServer;
 import argonms.game.character.BuffState;
 import argonms.game.character.PlayerContinuation;
 import argonms.game.field.entity.PlayerSkillSummon;
+import java.lang.ref.ReferenceQueue;
+import java.lang.ref.WeakReference;
 import java.net.UnknownHostException;
-import java.util.ArrayList;
-import java.util.List;
 import java.util.Map;
-import java.util.concurrent.CancellationException;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
-import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.BlockingQueue;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicInteger;
 
 /**
@@ -66,59 +62,72 @@ public class CrossProcessCrossChannelCommunication implements CrossChannelCommun
 		CHATROOM_TEXT = 19
 	;
 
-	private static class ResponseFuture<T> implements Future<List<T>> {
-		private final CountDownLatch waitHandle;
-		private final List<T> responses;
-		private final AtomicInteger responsesReceived;
-		private final AtomicBoolean canceled;
+	private static class WeakValueMap<K, V> {
+		private final Map<K, WeakValue<K, V>> backingMap;
+		private final ReferenceQueue<V> queue;
 
-		public ResponseFuture(int expectedResponses) {
-			waitHandle = new CountDownLatch(expectedResponses);
-			responses = new ArrayList<T>(expectedResponses);
-			responsesReceived = new AtomicInteger(0);
-			canceled = new AtomicBoolean(false);
+		public WeakValueMap(Map<K, WeakValue<K, V>> backingMap) {
+			this.backingMap = backingMap;
+			queue = new ReferenceQueue<V>();
 		}
 
-		@Override
-		public boolean cancel(boolean mayInterruptIfRunning) {
-			if (canceled.compareAndSet(false, true)) {
-				for (long i = waitHandle.getCount() - 1; i >= 0; i--)
-					waitHandle.countDown();
-				return true;
+		@SuppressWarnings("unchecked")
+		private void processQueue() {
+			WeakValue<K, V> wv;
+			while ((wv = (WeakValue<K, V>) queue.poll()) != null)
+				backingMap.remove(wv.key);
+		}
+
+		private V getReferenceObject(WeakReference<V> ref) {
+			return ref == null ? null : ref.get();
+		}
+
+		public V get(K key) {
+			return getReferenceObject(backingMap.get(key));
+		}
+
+		public V put(K key, V value) {
+			processQueue();
+			WeakValue<K, V> oldValue = backingMap.put(key, WeakValue.<K, V>create(key, value, queue));
+			return getReferenceObject(oldValue);
+		}
+
+		public V remove(K key) {
+			return getReferenceObject(backingMap.remove(key));
+		}
+
+		private static class WeakValue<K, V> extends WeakReference<V> {
+			private K key;
+
+			private WeakValue(K key, V value, ReferenceQueue<V> queue) {
+				super(value, queue);
+				this.key = key;
 			}
-			return false;
-		}
 
-		@Override
-		public boolean isCancelled() {
-			return canceled.get();
-		}
+			private static <K, V> WeakValue<K, V> create(K key, V value, ReferenceQueue<V> queue) {
+				return (value == null ? null : new WeakValue<K, V>(key, value, queue));
+			}
 
-		@Override
-		public boolean isDone() {
-			return isCancelled() || waitHandle.getCount() == 0;
-		}
+			@Override
+			public boolean equals(Object obj) {
+				if (this == obj)
+					return true;
+				if (!(obj instanceof WeakValue))
+					return false;
+				Object ref1 = this.get();
+				Object ref2 = ((WeakValue) obj).get();
+				if (ref1 == ref2)
+					return true;
+				if ((ref1 == null) || (ref2 == null))
+					return false;
+				return ref1.equals(ref2);
+			}
 
-		@Override
-		public List<T> get() throws InterruptedException, ExecutionException {
-			waitHandle.await();
-			if (canceled.get())
-				throw new CancellationException();
-			return responses;
-		}
-
-		@Override
-		public List<T> get(long timeout, TimeUnit unit) throws InterruptedException, TimeoutException {
-			if (!waitHandle.await(timeout, unit))
-				throw new TimeoutException("Response for inter channel intercourse timed out after " + timeout + " " + unit.toString().toLowerCase() + ". Needed " + waitHandle.getCount() + " more responses.");
-			if (canceled.get())
-				throw new CancellationException();
-			return responses;
-		}
-
-		public void set(T response) {
-			responses.set(responsesReceived.getAndIncrement(), response);
-			waitHandle.countDown();
+			@Override
+			public int hashCode() {
+				Object ref = this.get();
+				return (ref == null) ? 0 : ref.hashCode();
+			}
 		}
 	}
 
@@ -127,6 +136,8 @@ public class CrossProcessCrossChannelCommunication implements CrossChannelCommun
 	private final byte targetCh;
 	private final byte[] ipAddress;
 	private int port;
+	private final WeakValueMap<Integer, BlockingQueue<Pair<Byte, Object>>> blockingCalls;
+	private final AtomicInteger nextResponseId;
 
 	public CrossProcessCrossChannelCommunication(CrossServerCommunication self, byte localCh, byte remoteCh, byte[] ipAddress, int port) {
 		this.handler = self;
@@ -134,6 +145,10 @@ public class CrossProcessCrossChannelCommunication implements CrossChannelCommun
 		this.targetCh = remoteCh;
 		this.ipAddress = ipAddress;
 		this.port = port;
+		//prevents memory leaks in case responses time out and never reach us
+		this.blockingCalls = new WeakValueMap<Integer, BlockingQueue<Pair<Byte, Object>>>
+				(new ConcurrentHashMap<Integer, WeakValueMap.WeakValue<Integer, BlockingQueue<Pair<Byte, Object>>>>());
+		this.nextResponseId = new AtomicInteger(0);
 	}
 
 	@Override
@@ -168,6 +183,12 @@ public class CrossProcessCrossChannelCommunication implements CrossChannelCommun
 				break;
 			case INBOUND_PLAYER_ACCEPTED:
 				receivedChannelChangeAcceptance(packet);
+				break;
+			case PLAYER_SEARCH:
+				receivedPlayerExistsCheck(packet);
+				break;
+			case PLAYER_SEARCH_RESPONSE:
+				receivedPlayerExistsResult(packet);
 				break;
 		}
 	}
@@ -247,5 +268,46 @@ public class CrossProcessCrossChannelCommunication implements CrossChannelCommun
 		int playerId = packet.readInt();
 
 		handler.receivedChannelChangeAcceptance(targetCh, playerId);
+	}
+
+	@Override
+	public void callPlayerExistsCheck(BlockingQueue<Pair<Byte, Object>> resultConsumer, String name) {
+		int responseId = nextResponseId.incrementAndGet();
+		blockingCalls.put(Integer.valueOf(responseId), resultConsumer);
+
+		LittleEndianByteArrayWriter lew = new LittleEndianByteArrayWriter(10 + name.length());
+		writeCrossProcessCrossChannelCommunicationPacketHeader(lew, PLAYER_SEARCH);
+		lew.writeInt(responseId);
+		lew.writeLengthPrefixedString(name);
+
+		writeCrossProcessCrossChannelCommunicationPacket(lew.getBytes());
+	}
+
+	private void receivedPlayerExistsCheck(LittleEndianReader packet) {
+		int responseId = packet.readInt();
+		String name = packet.readLengthPrefixedString();
+
+		returnPlayerExistsResult(responseId, GameServer.getChannel(localCh).getPlayerByName(name) != null);
+	}
+
+	private void returnPlayerExistsResult(int responseId, boolean result) {
+		LittleEndianByteArrayWriter lew = new LittleEndianByteArrayWriter(9);
+		writeCrossProcessCrossChannelCommunicationPacketHeader(lew, PLAYER_SEARCH_RESPONSE);
+		lew.writeInt(responseId);
+		lew.writeBool(result);
+
+		writeCrossProcessCrossChannelCommunicationPacket(lew.getBytes());
+	}
+
+	private void receivedPlayerExistsResult(LittleEndianReader packet) {
+		int responseId = packet.readInt();
+		boolean result = packet.readBool();
+
+		BlockingQueue<Pair<Byte, Object>> consumer = blockingCalls.remove(Integer.valueOf(responseId));
+		if (consumer == null)
+			//timed out and garbage collected
+			return;
+
+		consumer.offer(new Pair<Byte, Object>(Byte.valueOf(targetCh), Boolean.valueOf(result)));
 	}
 }
